--- a/css/style.css
+++ b/css/style.css
@@ -619,6 +619,17 @@ label {
 .service-icon {
 	float: left;
 }
+.skills-container {
+	display: flex;
+	justify-content: center;
+}
+.skills-icon {
+	height: 100px;
+	width: 100px;
+}
+.skill-icon-area > h5 {
+	text-align: center;
+}
 .service-icon span {
 	border-radius: 50%;
 	color: #252525;
