fixed icons for skills section

--- a/css/style.css
+++ b/css/style.css
@@ -623,16 +623,14 @@ label {
 	display: flex;
 	justify-content: center;
 }
-.skills-icon {
+/* .skills-icon {
+	height: 100px;
+	width: 100px;
+} */
+.devicon-skills{
 	height: 100px;
 	width: 100px;
 }
-
-.devicon-skills{
-	height:100px;
-	width:100px;
-}
-
 .skill-icon-area > h5 {
 	text-align: center;
 }
