--- a/css/style.css
+++ b/css/style.css
@@ -518,6 +518,12 @@ label {
 .about-me img {
 	width: 100%;
 }
+
+.portfolio-img {
+	display: flex;
+    align-items: center;
+}
+
 .about-me-info h2 {
 	font-size: 26px;
 	color: #252525;
