--- a/css/brandon-style.css
+++ b/css/brandon-style.css
@@ -9,3 +9,10 @@
 .skill-icon-area > h5 {
 	text-align: center;
 }
+.skill-icon-area {
+	text-align: center;
+}
+
+/* .col-sm-6 {
+	max-width: 100%;
+} */
