--- a/css/brandon-style.css
+++ b/css/brandon-style.css
@@ -13,6 +13,15 @@
 	text-align: center;
 }
 
-.col-xs-6 {
+/* .col-xs-6 {
     max-width: 50%;
+} */
+
+@media (max-width: 576px){
+.col-xs-6 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+	}
 }
