--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ label {
 	text-transform: capitalize;
 }
 .hero {
-	height: 100%;
+	height: 100vh;
 	position: relative;
 	overflow: hidden;
 }
@@ -810,7 +810,8 @@ label {
 .portfolio-wrapper:hover .portfolio-thumb::before{opacity: .9;visibility: visible;}
 .portfolio-thumb > img {
     width: 100%;
-    transition: .3s;
+	transition: .3s;
+	max-height: 450px;
 }
 .portfolio-wrapper:hover .portfolio-thumb > img{transform: scale(1.2)}
 .portfolio-content {
